# hermes-agent-abacus-ai

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
abacus_ai/: __init__.py  background.py  config.py  models.py  plugin.yaml  provider.py  utils.py
tests/: conftest.py  test_background.py  test_provider.py  test_utils.py
