[project]
name = "hermes-agent-abacus-ai"
version = "2.0.0"
description = "Abacus AI image generation plugin for Hermes Agent — FLUX, DALL-E, MidJourney, Nano Banana Pro 4K, and 20+ models"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "ZoniBoy00" },
]
keywords = ["hermes-agent", "hermes-plugin", "image-generation", "abacus-ai", "flux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.28.0",
]

[project.entry-points."hermes_agent.plugins"]
abacus_ai = "abacus_ai"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["abacus_ai*"]
